# PasswordManager

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: Password_ManagerConfig.cmake.in  Password_ManagerConfig.h.in
include/: db.h
src/: CMakeLists.txt  db.cpp
